--- a/poc/unit-tests/test.html
+++ b/poc/unit-tests/test.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8">
   <title>QUnit Example</title>
   <link rel="stylesheet" href="qunit/qunit.css">
+  
+  <script src="../../esprima-master/esprima.js" ></script>
+  <script src="../runtime.js"></script>
+  
 </head>
 <body>
   <div id="qunit"></div>
