For working correctly and added runtime.meta to html

--- a/poc/poc.html
+++ b/poc/poc.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width" />
       <script src="../esprima-master/esprima.js" ></script>
       <script src="runtime.js"></script>
+	  <script src="runtime.meta.js"></script>
     </head>
     <body>
 
